--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.box {
+  width: 200px;
+  height: 200px;
+  background-color: #fff;
+  color: gray;
+  box-shadow: 0 0 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  margin: 20px;
+}
+
+.details-container {
+}
+
+.detail-title {
+  display: flex;
+  justify-content: center;
+  font-weight: 600;
+}
+
+.lottery-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.nft-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.description {
+  width: 80%;
+  height: 250px;
+  border: 1px solid;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nft-detail-container {
+  padding: 30px;
 }
