--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,10 @@ code {
 .nft-detail-container {
   padding: 30px;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
